# brewery_finder

./: CMakeLists.txt  FirstPage.qml  Fonts.qrc  Images.qrc  Main.qml  MapPage.qml  README.md  SecondPage.qml  brewerymanager.cpp  brewerymanager.h  main.cpp
android/: AndroidManifest.xml
android_openssl/: CMakeLists.txt  android_openssl.cmake  build_ssl.sh  openssl.pri
android_openssl/no-asm/ssl_1.1/include/openssl/: opensslconf.h
android_openssl/no-asm/ssl_3/include/crypto/: bn.h  context.h  dso_conf.h  evp.h  modes.h  punycode.h  x509.h
android_openssl/no-asm/ssl_3/include/internal/: cryptlib.h  namemap.h  provider.h  refcount.h  tsan_assist.h
android_openssl/no-asm/ssl_3/include/openssl/: asn1.h  configuration.h  crypto.h
android_openssl/ssl_1.1/include/openssl/: opensslconf.h
android_openssl/ssl_3/include/crypto/: aes_platform.h  bn_conf.h  decoder.h  encoder.h  md32_common.h  rand.h  riscv_arch.h  sm4_platform.h
android_openssl/ssl_3/include/internal/: e_os.h  ffc.h  sockets.h
android_openssl/ssl_3/include/openssl/: conf.h  configuration.h  opensslv.h  pkcs12.h  pkcs7.h  ssl.h  x509.h  x509v3.h
android_openssl/tst_openssl/: CMakeLists.txt  tst_openssl.cpp  tst_openssl.pro
